# BoxBoxAI

./: .gitignore  Dockerfile  README.md  pyproject.toml  viz.html  viz_data.json
brain/: chat_service.py  config.py  llm_client.py  main.py  requirements.txt  server.py
brain/extract/: mcap_reader.py  topic_registry.py
brain/output/: json_builder.py  llm_prompt.py  track_viz.py
brain/physics/: brake_analyzer.py  coaching_rules.py  consistency.py  corner_analyzer.py  lap_splitter.py  reference_builder.py  (+4 more)
driving-data/: README.md  yas_marina_bnd.json
driving-data/sd_msgs/sd_can_msgs/: CMakeLists.txt  package.xml
driving-data/sd_msgs/sd_can_msgs/msg/BSU/: BSURanges01.msg  BSURanges02.msg  BSUStatus01.msg  BSUStatus01Legacy.msg  BSUStatus01Updated.msg  CbaStatusFl.msg  CbaStatusFr.msg  CbaStatusRl.msg  CbaStatusRr.msg  DiagnosticWord01.msg  DiagnosticWord01Legacy.msg  DiagnosticWord01Updated.msg  DiagnosticWord02.msg  DiagnosticWord02Legacy.msg  DiagnosticWord02Updated.msg  EMStatus01.msg  EMStatus01Legacy.msg  EMStatus01Updated.msg  FlagInfoOutput.msg  HLMsg01.msg  HLMsg02.msg  HLMsg03.msg  HLMsg03Legacy.msg  HLMsg03Updated.msg  HLMsg04.msg  HLMsg05.msg  HLMsg06.msg  ICEStatus01.msg  ICEStatus02.msg  PSAStatus01.msg  PSAStatus02.msg  PdUsStatus01.msg  PdUsStatus01Legacy.msg  PdUsStatus01Updated.msg  RcStatus01.msg  SwVersions01.msg  SwVersions01Legacy.msg  SwVersions01Updated.msg  SwVersions02.msg  SwVersions03.msg  (+1 more)
driving-data/sd_msgs/sd_can_msgs/msg/Badenia/: Badenia560BadeniaMisc.msg  Badenia560BrakeDiskTemp.msg  Badenia560MLStatus.msg  Badenia560Misc4.msg  Badenia560Misc5.msg  Badenia560Pitot.msg  Badenia560Pitot0.msg  Badenia560Pitot1.msg  Badenia560PowertrainMisc.msg  Badenia560PowertrainPress.msg  Badenia560PowertrainTemp.msg  Badenia560RideFront.msg  Badenia560RideRear.msg  Badenia560TpmsFront.msg  Badenia560TpmsRear.msg  Badenia560TyreSurfaceTempFront.msg  Badenia560TyreSurfaceTempRear.msg  Badenia560WheelLoad.msg  Badenia560ZAccelBody.msg
driving-data/sd_msgs/sd_can_msgs/msg/HLPC/: HLPCInfo1.msg
driving-data/sd_msgs/sd_can_msgs/msg/MM710/: MM710TX1ZAY.msg  MM710TX2XAX.msg  MM710TX3YAZ.msg
driving-data/sd_msgs/sd_can_msgs/msg/TEXIB6/: TEXIB6rTx1.msg  TEXIB6rTx2.msg
driving-data/sd_msgs/sd_can_msgs/msg/kistler/: KistlerAccBody.msg  KistlerAccHorAccCBody.msg  KistlerAngVelBody.msg  KistlerAngVelHor.msg  KistlerCorrevit.msg  KistlerDistance.msg  KistlerPitchRoll.msg  KistlerStatus.msg  KistlerVelAngle.msg
driving-data/sd_msgs/sd_localization_msgs/: CMakeLists.txt  package.xml
driving-data/sd_msgs/sd_localization_msgs/msg/: StateEstimation.msg
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+35 files in other folders)
